feat: Add domain creation functionality for XMPP clients
- Added custom IQ handler for domain creation via XMPP protocol
- Implemented REST API endpoint for domain creation
- Added security validation requiring admin privileges
- Created domain name format validation
- Added configuration option to enable/disable client domain creation
- Updated bootstrap.yml with domain creation settings
- Enhanced .gitignore to exclude large files and build artifacts

Features:
- XMPP IQ namespace: urn:timplus:domain:create
- REST endpoint: POST /api/domains/create
- Admin authentication required
- Domain validation and conflict checking
- Configurable via timplus.domain.allowClientCreation property

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
 		    <groupId>com.h2database</groupId>
 		    <artifactId>h2</artifactId>
 		    <scope>test</scope>
+		</dependency>
+		<!-- Override problematic libidn version -->
+		<dependency>
+		    <groupId>org.gnu.inet</groupId>
+		    <artifactId>libidn</artifactId>
+		    <version>0.6.5</version>
 		</dependency>		
 	</dependencies>
 
@@ -184,6 +190,8 @@
 					</execution>
 				</executions>
 			</plugin>			
+		    <!-- JavaDoc plugin disabled due to Java 25 compatibility issues -->
+		    <!--
 		    <plugin>
 		      	<groupId>org.apache.maven.plugins</groupId> 
 		        <artifactId>maven-javadoc-plugin</artifactId>
@@ -209,7 +217,8 @@
 		                </goals>
 		            </execution>
 		        </executions>		        
-		    </plugin>  	
+		    </plugin>
+		    -->  	
 		    <!--  for releases only	 	
 		    <plugin>
 	             <groupId>org.apache.maven.plugins</groupId>
