--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,68 @@
-# Compiled class file
+# Build artifacts
+target/
+*.jar
+*.war
+*.ear
 *.class
 
-# Log file
+# Exclude large build artifacts
+timplus-server-boot-*.jar
+timplus-tools-*.jar
+
+# Exclude backup directories
+*.backup-*
+
+# Exclude large JAR files but keep them locally
+timplus-tools-1.0.0.jar
+
+# Exclude plugins directory (contains large JAR files)
+plugins/
+conf/
+
+# IDE files
+.vscode/
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Database files
+embedded-db/
+*.db
+*.lck
+*.log
+*.script
+*.properties
+
+# Certificate files
+*.der
+*.p12
+*.crl
+*.pem
+*.key
+*.crt
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
 *.log
 
-# BlueJ files
-*.ctxt
+# Temporary files
+*.tmp
+*.temp
+*.swp
+*.swo
+*~
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Maven
+.mvn/wrapper/maven-wrapper.jar
+.mvn/wrapper/maven-wrapper.properties
 
-# Package Files #
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-/target/
-/.DS_Store
-/conf/
-/plugins/
-/resources/
-/.classpath
-/.project
+# Spring Boot
+application-*.properties
+application-*.yml
+!application.yml
+!application.properties
